--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "one": "node one"
+    "one": "node one",
+    "two": "node two"
   },
   "keywords": [],
   "author": "",
